--- a/code/NoSQL_setup_starter.ipynb
+++ b/code/NoSQL_setup_starter.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "ef1b89ed",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "6a0d92df",
    "metadata": {},
    "outputs": [
@@ -112,32 +112,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': '1 The Droveway',\n",
-      " 'AddressLine2': 'St Margarets Bay',\n",
-      " 'AddressLine3': 'Kent',\n",
-      " 'AddressLine4': '',\n",
-      " 'BusinessName': 'FirstLight Bar & Café',\n",
+      "{'AddressLine1': 'East Cliff Pavilion',\n",
+      " 'AddressLine2': 'Wear Bay Road',\n",
+      " 'AddressLine3': 'Folkestone',\n",
+      " 'AddressLine4': 'Kent',\n",
+      " 'BusinessName': 'The Pavilion',\n",
       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4587.64041272672,\n",
-      " 'FHRSID': 1290215,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000083029',\n",
-      " 'LocalAuthorityCode': '182',\n",
-      " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
-      " 'LocalAuthorityName': 'Dover',\n",
-      " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
+      " 'Distance': 4591.765489457773,\n",
+      " 'FHRSID': 1043695,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000073616',\n",
+      " 'LocalAuthorityCode': '188',\n",
+      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
+      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
+      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT15 6DH',\n",
-      " 'RatingDate': '2020-11-09T00:00:00',\n",
+      " 'PostCode': 'CT19 6BL',\n",
+      " 'RatingDate': '2018-04-04T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
       " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('653affc079afc9274b6c6c99'),\n",
-      " 'geocode': {'latitude': '51.150625', 'longitude': '1.378231'},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1290215',\n",
+      " '_id': ObjectId('653affc079afc9274b6c6f7d'),\n",
+      " 'geocode': {'latitude': 51.083812, 'longitude': 1.195625},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [],
@@ -223,17 +223,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "a6e5cece",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.InsertOneResult at 0x1075f3e20>"
+       "<pymongo.results.InsertOneResult at 0x118ef3b20>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "63bb10f9",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
       " 'AddressLine4': '',\n",
       " 'BusinessName': 'Penang Flavours',\n",
       " 'BusinessType': 'Restaurant/Cafe/Canteen',\n",
-      " 'BusinessTypeID': '',\n",
+      " 'BusinessTypeID': 1,\n",
       " 'Distance': 4623.972328074718,\n",
       " 'LocalAuthorityCode': '511',\n",
       " 'LocalAuthorityEmailAddress': 'health@royalgreenwich.gov.uk',\n",
@@ -271,7 +271,7 @@
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('653b02c38669c94e35da3a46'),\n",
-      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
+      " 'geocode': {'latitude': 51.490142, 'longitude': 0.08384},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "id": "93c63829",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
      "text": [
       "{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       " 'BusinessTypeID': 1,\n",
-      " '_id': ObjectId('653affc079afc9274b6c6c99')}\n"
+      " '_id': ObjectId('653affc079afc9274b6c6f7d')}\n"
      ]
     }
    ],
@@ -322,17 +322,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "7f599f3d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x107516fe0>"
+       "<pymongo.results.UpdateResult at 0x118e171f0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "a6ad16f7",
    "metadata": {},
    "outputs": [
@@ -373,7 +373,7 @@
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('653b02c38669c94e35da3a46'),\n",
-      " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
+      " 'geocode': {'latitude': 51.490142, 'longitude': 0.08384},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
     }
@@ -394,17 +394,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "id": "768474a6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "994"
+       "0"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,17 +417,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "a11d5f1b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.DeleteResult at 0x107515120>"
+       "<pymongo.results.DeleteResult at 0x118ef3af0>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "2a51aba0",
    "metadata": {},
    "outputs": [
@@ -451,7 +451,7 @@
        "0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "8c356f7b",
    "metadata": {},
    "outputs": [
@@ -496,7 +496,7 @@
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
       " '_id': ObjectId('653affc079afc9274b6c6f7d'),\n",
-      " 'geocode': {'latitude': '51.083812', 'longitude': '1.195625'},\n",
+      " 'geocode': {'latitude': 51.083812, 'longitude': 1.195625},\n",
       " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1043695',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
@@ -536,17 +536,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "fd4112ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x1075f3700>"
+       "<pymongo.results.UpdateResult at 0x118e16740>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,10 +572,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "04430a5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x118ef3c40>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Set non 1-5 Rating Values to Null\n",
     "non_ratings = [\"AwaitingInspection\", \"Awaiting Inspection\", \"AwaitingPublication\", \"Pass\", \"Exempt\"]\n",
@@ -594,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "id": "0deacaf9",
    "metadata": {},
    "outputs": [
